Fix message too long bug

--- a/work/js-express/public/css/chat.css
+++ b/work/js-express/public/css/chat.css
@@ -155,6 +155,9 @@ footer {
     font-size: small;
     color: var(--minor-text-color);
 }
+.chatroom-message-block .message-content {
+    overflow-wrap: break-word;
+}
 .chatroom-addmessage {
     flex: 0 0 auto;
     box-sizing: border-box;
